--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <nav>
+        <h1>logo</h1>
+        <div class="nav-part2">
+          <h4>store</h4>
+          <h4>courses</h4>
+          <h4>career</h4>
+          <h4>Blog</h4>
+          <h4>account</h4>
+        </div>
+      </nav>
+    </div>
+  </body>
 </html>
