--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main">
-      <nav>
+      <div class="nav">
         <h1>logo</h1>
         <div class="nav-part2">
           <h4>store</h4>
@@ -17,7 +17,7 @@
           <h4>Blog</h4>
           <h4>account</h4>
         </div>
-      </nav>
+      </div>
     </div>
   </body>
 </html>
