--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main">
@@ -16,7 +20,21 @@
           <h4>career</h4>
           <h4>Blog</h4>
           <h4>account</h4>
+          <i class="ri-menu-3-line"></i>
         </div>
+      </div>
+      <div class="content">
+        <div class="left">
+          <h1>The best code <span>learning</span> platform in bangladesh</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab,
+            pariatur? Recusandae nesciunt quam impedit rerum animi accusantium
+            repellat molestias quo sunt odit fuga soluta nostrum unde beatae,
+            aliquid, dolorem eveniet!
+          </p>
+          <button>Explore Now</button>
+        </div>
+        <div class="right"></div>
       </div>
     </div>
   </body>
