made responsive for mobile view

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <h4>career</h4>
           <h4>Blog</h4>
           <h4>account</h4>
+          <button>Sign In</button>
           <i class="ri-menu-3-line"></i>
         </div>
       </div>
@@ -34,7 +35,9 @@
           </p>
           <button>Explore Now</button>
         </div>
-        <div class="right"></div>
+        <div class="right">
+          <img src="./images/boy.jpg" alt="boy image" />
+        </div>
       </div>
     </div>
   </body>
